# large-file-compare

./: .gitignore  GEMINI.md  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: compare_file.txt  difference.txt  standard_file.txt  编程大赛-大文件快速高效比对.xlsx
src/: App.vue  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: comparison.rs  comparison_in_memory.rs  file_processing.rs  file_processing_in_memory.rs  lib.rs  main.rs  payloads.rs  utils.rs
src-tauri/src/exmemory/: comparison.rs  file_processing.rs
src-tauri/src/inmemory/: comparison_in_memory.rs
src-tauri/src/internal/: comparison_in_memory.rs
src-tauri/src/tests/: file_generator.rs  file_modifier.rs  large_file_generator.rs  mod.rs
test_data/: a_duplicates.txt  a_simple.txt  b_all_unique.txt  b_duplicates.txt  b_shuffle.txt
